# FreeModbus

./: .gitignore  CMakeLists.txt  README.en.md  README.md  a.out  main.c  note.txt
lib/modbus/inc/: mdcrc16.h  mdrecbuffer.h  mdregpool.h  mdrtuslave.h  mdtype.h  modbus.h
lib/modbus/src/: crc16.c  mdrecbuffer.c  mdrtuslave.c  modbus.c  regpool.c
libfreemodbus/: mdconfig.h  mdcrc16.c  mdrecbuffer.c  mdrecbuffer.h  mdregpool.c  mdregpool.h  mdrtuslave.c  mdrtuslave.h
libsimulation/: CMakeLists.txt  core.c  core.h
test/: CMakeCache.txt  Makefile  cmake_install.cmake  mytest
test/libfreemodbus/: Makefile  cmake_install.cmake
test/libsimulation/: Makefile  cmake_install.cmake
